<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/default_margin"
    android:paddingEnd="@dimen/default_margin"
    android:paddingStart="@dimen/default_margin"
    android:background="@drawable/cornor_drawable"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/content"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_full"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/close"
        android:gravity="center"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/string_ok"
        android:background="@drawable/star"
        android:layout_gravity="right"
        tools:ignore="RtlHardcoded" />

</LinearLayout>